--- a/Koha/Plugin/Com/ByWaterSolutions/PeopleSoftConverter/tool-step1.tt
+++ b/Koha/Plugin/Com/ByWaterSolutions/PeopleSoftConverter/tool-step1.tt
@@ -12,6 +12,7 @@
     <p>Please upload your PeopleSoft CSV File</p>
 
     <form method="post" enctype="multipart/form-data">
+        [% INCLUDE 'csrf-token.inc' %]
         <input type="hidden" name="class" value="[% CLASS %]"/>
         <input type="hidden" name="method" value="[% METHOD %]"/>
         <p>File to upload: <input type="file" name="peoplesoft" /></p>
